# molgate

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GUIDE.md  LICENSE  MOLPROP.md  Makefile  README.md  pyproject.toml  requirements.txt
admet/: __init__.py  dataset.py  evaluate.py  featurizer.py  model.py  train.py
admet/analysis/: __init__.py  bias.py  experiment.py  report.py  runner.py
configs/: bias_experiments.yaml  datasets.yaml  models.yaml  properties.yaml  wandb.yaml
configs/experiments/: herg_bias_study.yaml  solubility_bias_study.yaml
notebooks/: 06_ensemble_lab.ipynb
outputs/: solubility_lgbm_morgan_lgbm_descriptors_gnn_results.csv  solubility_lgbm_morgan_lgbm_descriptors_results.csv
results/tables/: split_comparison.csv
scripts/: benchmark_eval.py  run_bias_experiment.py  run_bias_study.py  train_property.py  visualize_gnn_graph.py
src/molgate/: __init__.py  cli.py  tracking.py
src/molgate/analysis/: __init__.py  bias_diagnostics.py  cliffs.py  descriptors.py  scaffolds.py
src/molgate/flows/: __init__.py  bias_experiment.py  compare_flow.py  eda_flow.py  train_flow.py
src/molgate/models/: __init__.py  baseline.py  ensemble.py  factory.py  gnn.py  sklearn_models.py  tuning.py
src/molgate/serve/: checkpoint.py  predict.py
src/molgate/training/: __init__.py  evaluate.py  metrics.py  trainer.py
tests/: __init__.py  conftest.py  test_analysis_bias_diagnostics.py  test_analysis_cliffs.py  test_analysis_descriptors.py  test_analysis_scaffolds.py  test_bias.py  test_dataset.py  test_ensemble.py  test_featurizer.py  test_flows.py  test_loaders.py  test_model.py  test_models.py  test_registry.py  test_splits.py  test_training.py  test_wandb.py
