[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "molgate"
version = "0.1.0"
description = "ADMET property prediction pipeline with GNNs"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["admet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
